# DummyConcurrencyLibrary

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DummyConcurrencyLibrary.sln
dcl/: CMakeLists.txt  DummyConcurrency.Interface.vcxproj
dcl/inc/: Accumulator.h  ThreadPool.h
tests/: BasicTests.cpp  CMakeLists.txt  DummyConcurrencyLibrary.Tests.vcxproj
